--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,9 +10,22 @@ html {
 
 body {
   color: black;
-  color: red;
+  color: rgb(44, 44, 44);
+  /* color: red; */
   margin: 0px;
   padding: 0px;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.wrapper {
+  padding: 2rem;
+}
+
+.universal-okvir {
+  padding: 1rem;
 }
 
 
@@ -30,16 +43,26 @@ body {
     border-radius: 6px;
     margin-bottom: 1rem;
     padding: 0.5rem;
+    max-width: 600px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: stretch;
 
     >* {
       margin-right: 1rem;
     }
+
+    p {
+      margin-top: 0px;
+      margin-bottom: 0.2em;
+    }
+
+    input {
+      width: 100%;
+    } 
   }
 }
 
