--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -80,7 +80,8 @@ table.tabelar-form {
 
   }
 
-  input {
+  input, 
+  select {
     width: 100%;
     margin: 0px;
     border-radius: 0px;
@@ -89,7 +90,8 @@ table.tabelar-form {
     height: 2rem;
     padding: 0px 0.5rem;
   }
-  input:focus {
+  input:focus,
+  select:focus {
     background-color: rgb(255, 255, 180);
   }
   input[type="number"] {
