vezbanje sa kockicama

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,3 +99,14 @@ table.tabelar-form {
     font-family: monospace; /* monospcae je font gde je svaki character u polju istih dimenzija */
   }
 }
+
+
+.kockica {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 30px;
+}
