--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,7 @@
 
 html {
   font-size: 16px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -27,7 +27,6 @@ body {
 .universal-okvir {
   padding: 1rem;
 }
-
 
 .comment-list {
   display: flex;
@@ -51,7 +50,7 @@ body {
     justify-content: space-between;
     align-items: stretch;
 
-    >* {
+    > * {
       margin-right: 1rem;
     }
 
@@ -62,7 +61,7 @@ body {
 
     input {
       width: 100%;
-    } 
+    }
   }
 }
 
@@ -77,10 +76,9 @@ table.tabelar-form {
   td {
     border: 1px solid black;
     padding: 0px;
-
   }
 
-  input, 
+  input,
   select {
     width: 100%;
     margin: 0px;
@@ -100,7 +98,6 @@ table.tabelar-form {
   }
 }
 
-
 .kockica {
   display: inline-block;
   width: 30px;
@@ -109,4 +106,17 @@ table.tabelar-form {
   vertical-align: middle;
   text-align: center;
   line-height: 30px;
+}
+
+.kockica.blue {
+  background-color: rgb(199, 236, 236);
+}
+.kockica.yellow {
+  background-color: rgb(239, 239, 163);
+}
+.kockica.red {
+  background-color: rgb(242, 179, 179);
+}
+.kockica.red-hot{
+  background-color:rgb(242, 136, 136) ;
 }
