--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -108,6 +108,10 @@ table.tabelar-form {
   line-height: 30px;
 }
 
+.kockica.pametna {
+  cursor: pointer;
+}
+
 .kockica.blue {
   background-color: rgb(199, 236, 236);
 }
