--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -106,21 +106,33 @@ table.tabelar-form {
   vertical-align: middle;
   text-align: center;
   line-height: 30px;
+  font-weight: 600;
+  font-size: 13px;
 }
 
 .kockica.pametna {
   cursor: pointer;
 }
 
+.kockica.purple {
+  background-color: rgb(236, 157, 236);
+}
 .kockica.blue {
   background-color: rgb(199, 236, 236);
 }
 .kockica.yellow {
   background-color: rgb(239, 239, 163);
 }
-.kockica.red {
-  background-color: rgb(242, 179, 179);
+.kockica.green {
+  background-color: rgb(137, 220, 122);
 }
-.kockica.red-hot{
-  background-color:rgb(242, 136, 136) ;
+.kockica.orange {
+  background-color: rgb(248, 198, 105);
+}
+.kockica.red {
+  background-color: rgb(247, 157, 157);
+}
+.kockica.red-hot {
+  background-color: rgb(195, 78, 78);
+  color: white;
 }
