--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,6 +99,7 @@ table.tabelar-form {
 }
 
 .kockica {
+  position: relative;
   display: inline-block;
   width: 30px;
   height: 30px;
@@ -111,7 +112,31 @@ table.tabelar-form {
 }
 
 .kockica.pametna {
-  cursor: pointer;
+  button {
+    display: none;
+    /* display: inline-block; */
+    width: 13px;
+    height: 13px;
+    font-size: 12px;
+    line-height: 11px;
+    padding: 0px;
+    cursor: pointer;
+
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+  }
+  button:last-child {
+    bottom: unset;
+    left: unset;
+    top: 0px;
+    right: 0px;
+  }
+}
+.kockica.pametna:hover {
+  button {
+    display: block;
+  }
 }
 
 .kockica.purple {
