kockice u bojama rade

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,6 +111,10 @@ table.tabelar-form {
   font-size: 13px;
 }
 
+.kockica.kockica-bojanka {
+  cursor: pointer;
+}
+
 .kockica.pametna {
   button {
     display: none;
