analogni sat, dodato 60 crtica

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -195,6 +195,15 @@ table.tabelar-form {
         top: 0px;
         left: 0px;
       }
+
+      .crtica{
+        height: 5px;
+        width: 2px;
+        background-color: rgb(93, 191, 68);
+        position: absolute;
+        top: 0px;
+        left: 0px;
+      }
     }
    
   }
