--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,7 +50,7 @@ body {
     justify-content: space-between;
     align-items: stretch;
 
-    > * {
+    >* {
       margin-right: 1rem;
     }
 
@@ -68,11 +68,13 @@ body {
 table.tabelar-form {
   border-spacing: 0px;
   border-collapse: collapse;
+
   th {
     border: 1px solid black;
     font-weight: 600;
     text-align: center;
   }
+
   td {
     border: 1px solid black;
     padding: 0px;
@@ -88,13 +90,16 @@ table.tabelar-form {
     height: 2rem;
     padding: 0px 0.5rem;
   }
+
   input:focus,
   select:focus {
     background-color: rgb(255, 255, 180);
   }
+
   input[type="number"] {
     text-align: right;
-    font-family: monospace; /* monospcae je font gde je svaki character u polju istih dimenzija */
+    font-family: monospace;
+    /* monospcae je font gde je svaki character u polju istih dimenzija */
   }
 }
 
@@ -132,6 +137,7 @@ table.tabelar-form {
     bottom: 0px;
     left: 0px;
   }
+
   button:last-child {
     bottom: unset;
     left: unset;
@@ -139,6 +145,7 @@ table.tabelar-form {
     right: 0px;
   }
 }
+
 .kockica.pametna:hover {
   button {
     display: block;
@@ -148,21 +155,27 @@ table.tabelar-form {
 .kockica.purple {
   background-color: rgb(236, 157, 236);
 }
+
 .kockica.blue {
   background-color: rgb(199, 236, 236);
 }
+
 .kockica.yellow {
   background-color: rgb(239, 239, 163);
 }
+
 .kockica.green {
   background-color: rgb(137, 220, 122);
 }
+
 .kockica.orange {
   background-color: rgb(248, 198, 105);
 }
+
 .kockica.red {
   background-color: rgb(247, 157, 157);
 }
+
 .kockica.red-hot {
   background-color: rgb(195, 78, 78);
   color: white;
@@ -195,6 +208,7 @@ table.tabelar-form {
         top: 0px;
         left: 0px;
       }
+
       .kazaljka-minutara {
         height: 40px;
         width: 4px;
@@ -229,7 +243,7 @@ table.tabelar-form {
     height: 40px;
     background-color: silver;
     margin-bottom: 2px;
-    padding: 0px 5px; 
+    padding: 0px 5px;
     font-family: monospace;
     font-weight: 600;
     font-size: 20px;
@@ -237,6 +251,7 @@ table.tabelar-form {
     text-align: right;
 
   }
+
   .calculator-tastatura {
     display: flex;
     flex-direction: row;
@@ -259,4 +274,9 @@ table.tabelar-form {
       align-items: center;
     }
   }
+}
+
+
+.grafik-kockica {
+  min-width: 400px;
 }
