--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -412,3 +412,40 @@ table.tabelar-form {
     }
   }
 }
+
+
+/*tic tac toe game*/
+
+.tic-tac-toe-board {
+
+  width: 180px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  .field {
+    width: 60px;
+    height: 60px;
+    border: 1px solid black;
+
+    .figure{
+      /* background-color: orange; */
+      width: 100%;
+      height: 100%;
+
+      text-align: center;
+      line-height: 58px;
+      font-weight: 900;
+      font-size: 40px;
+
+      &.figure-empty{
+        cursor: pointer;
+
+        &:hover {
+          background-color: rgba(0,0,0,0.1);
+        }
+      }
+    }
+
+  }
+}
