Memory game design in progress

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -512,3 +512,30 @@ table.tabelar-form {
     }
   }
 }
+
+
+/*Memory card game*/
+.memory-board{
+  width: 280px; /* 4*card plus margina */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+
+  .item {
+    width: 70px;
+    height: 70px;
+    padding: 5px;
+    
+
+    .memory-card{
+      width: 60px;
+      height: 60px;
+      border: 1px solid black;
+      border-radius: 10px;
+      box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
+
+    }
+  }
+  
+}
