--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -534,7 +534,11 @@ table.tabelar-form {
       border: 1px solid black;
       border-radius: 10px;
       box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
+      background-color: silver;
 
+      &.opened{
+        background-color:yellow;
+      }
     }
   }
   
