--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -503,6 +503,7 @@ table.tabelar-form {
       height: 10px;
       transform: rotate(45deg);
     }
+
     &.diagonal2 {
       top: 85px;
       left: -20px;
@@ -515,8 +516,9 @@ table.tabelar-form {
 
 
 /*Memory card game*/
-.memory-board{
-  width: 280px; /* 4*card plus margina */
+.memory-board {
+  width: 280px;
+  /* 4*card plus margina */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -526,20 +528,62 @@ table.tabelar-form {
     width: 70px;
     height: 70px;
     padding: 5px;
-    
+    overflow: hidden;
 
-    .memory-card{
-      width: 60px;
-      height: 60px;
-      border: 1px solid black;
-      border-radius: 10px;
-      box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
-      background-color: silver;
+    .memory-card-flipping {
+      position: relative;
 
-      &.opened{
-        background-color:yellow;
+      .front {
+        position: absolute;
+        transform: rotateY(270deg);
+        background-color:  white;
+      }
+
+      .back {
+        position: absolute;
+        transform: rotateY(0deg);
+      }
+
+      &.opened {
+        .front {
+          transform: rotateY(0deg);
+        }
+
+        .back {
+          transform: rotateY(90deg);
+        }
+      }
+
+      .memory-card {
+        position: relative;
+        width: 60px;
+        height: 60px;
+        border: 1px solid black;
+        border-radius: 10px;
+        padding: 5px;
+        overflow: hidden;
+        box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
+        background-color: silver;
+        text-align: center;
+        font-size: 10px;
+        cursor: pointer;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+
+      }
+
+
+      .front {
+        .memory-card {
+          background-color: white;
+        }
       }
     }
+
+
   }
-  
+
 }
