--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,23 @@ body {
   padding: 0px;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-number {
+  text-align: right;
+  font-family: monospace;
+}
+
 .flex-1 {
   flex: 1;
 }
@@ -536,7 +553,7 @@ table.tabelar-form {
       .front {
         position: absolute;
         transform: rotateY(270deg);
-        background-color:  white;
+        background-color: white;
       }
 
       .back {
@@ -568,6 +585,13 @@ table.tabelar-form {
         font-size: 10px;
         cursor: pointer;
 
+        &:hover {
+          box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%), 0 2px 4px -1px rgb(0 0 0 / 30%);
+          /*
+          box-shadow: 0 8px 17px 2px rgb(0 0 0 / 14%), 0 3px 14px 2px rgb(0 0 0 / 12%), 0 5px 5px -3px rgb(0 0 0 / 20%);
+          */
+        }
+
         img {
           width: 100%;
           height: auto;
@@ -586,4 +610,15 @@ table.tabelar-form {
 
   }
 
+}
+
+table.memory-game-score{
+  width: 280px;
+  border-spacing: 0px;
+  border-collapse: collapse;
+
+  th, td{
+    border: 1px solid gray;
+    padding: 0 3px;
+  }
 }
