--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -626,6 +626,9 @@ table.memory-game-score {
   border-spacing: 0px;
   border-collapse: collapse;
 
+  tr.highlight {
+    background-color: rgba(255,255,0,0.5);
+  }
   th,
   td {
     border: 1px solid gray;
