--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -627,11 +627,68 @@ table.memory-game-score {
   border-collapse: collapse;
 
   tr.highlight {
-    background-color: rgba(255,255,0,0.5);
+    background-color: rgba(255, 255, 0, 0.5);
   }
+
   th,
   td {
     border: 1px solid gray;
     padding: 0 3px;
   }
+}
+
+
+
+/* Slovarica */
+
+.slovarica-app {
+
+  section {
+    margin-bottom: 20px;
+  }
+
+
+  .magicni-input {
+    border: 1px solid blue;
+    /* height: 30px; */
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .slovarica-board {
+    max-width: 700px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+
+  .item {
+    width: 70px;
+    height: 70px;
+    padding: 5px;
+    overflow: hidden;
+
+    >.slovarica-kartica {
+      width: 60px;
+      height: 60px;
+      background-color: silver;
+      border: 1px solid black;
+      border-radius: 10px;
+
+      box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
+
+      &:hover {
+        box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%), 0 2px 4px -1px rgb(0 0 0 / 30%);
+
+
+      }
+    }
+  }
+
 }
